# ckanext-example_static

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/example_static/: plugin.py
ckanext/example_static/public/: static.html
ckanext/example_static/templates/custom/: index.html
