[metadata]
name = ckanext-example_static
version = 0.0.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-example_static
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             example_static = ckanext.example_static.plugin:ExampleStaticPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/example_static/i18n/ckanext-example_static.pot
width = 80

[init_catalog]
domain = ckanext-example_static
input_file = ckanext/example_static/i18n/ckanext-example_static.pot
output_dir = ckanext/example_static/i18n

[update_catalog]
domain = ckanext-example_static
input_file = ckanext/example_static/i18n/ckanext-example_static.pot
output_dir = ckanext/example_static/i18n
previous = true

[compile_catalog]
domain = ckanext-example_static
directory = ckanext/example_static/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
